// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Theme Factory > createAppTheme > creates high-vis mode theme with correct palette 1`] = `
{
  "applyStyles": [Function],
  "breakpoints": {
    "between": [Function],
    "down": [Function],
    "keys": [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ],
    "not": [Function],
    "only": [Function],
    "unit": "px",
    "up": [Function],
    "values": {
      "lg": 1200,
      "md": 1024,
      "sm": 600,
      "xl": 1536,
      "xs": 0,
    },
  },
  "components": {
    "MuiAlert": {
      "styleOverrides": {
        "root": {
          "border": "2px solid #1A1A1A",
          "borderRadius": 4,
        },
        "standardError": {
          "backgroundColor": "#B3261E",
          "border": "2px solid #000000",
          "color": "#FFFFFF",
        },
        "standardInfo": {
          "backgroundColor": "#4FB3FF",
          "color": "#FFFFFF",
        },
        "standardSuccess": {
          "backgroundColor": "#1E7344",
          "border": "2px solid #000000",
          "color": "#FFFFFF",
        },
        "standardWarning": {
          "backgroundColor": "#E37400",
          "border": "2px solid #000000",
          "color": "#000000",
        },
      },
    },
    "MuiAppBar": {
      "styleOverrides": {
        "root": {
          "borderBottom": "2px solid #1A1A1A",
          "boxShadow": "none",
        },
      },
    },
    "MuiButton": {
      "styleOverrides": {
        "contained": {
          "&:hover": {
            "boxShadow": "none",
          },
          "border": "2px solid #000000",
          "boxShadow": "none",
        },
        "outlined": {
          "&:hover": {
            "backgroundColor": "rgba(0, 0, 0, 0.04)",
          },
          "border": "2px solid #000000",
        },
        "root": {
          "&:focus-visible": {
            "outline": "2px solid #1D8CD8",
            "outlineOffset": "2px",
          },
          "borderRadius": 4,
          "fontSize": "19.52px",
          "fontWeight": 500,
          "minHeight": 52,
          "padding": "16px 24px",
          "textTransform": "none",
          "transition": "all 0ms cubic-bezier(0.4, 0.0, 0.2, 1)",
        },
      },
      "variants": [
        {
          "props": {
            "color": "error",
          },
          "style": {
            "border": "3px solid #000000",
            "fontWeight": 600,
          },
        },
      ],
    },
    "MuiCard": {
      "styleOverrides": {
        "root": {
          "&:hover": {
            "boxShadow": "none",
          },
          "backgroundColor": "#FFFFFF",
          "border": "2px solid #1A1A1A",
          "borderRadius": 4,
          "boxShadow": "none",
          "color": "#000000",
        },
      },
    },
    "MuiChip": {
      "styleOverrides": {
        "root": {
          "borderRadius": 999,
          "fontSize": "16px",
        },
      },
    },
    "MuiCssBaseline": {
      "styleOverrides": {
        "body": {
          "@media (prefers-reduced-motion: reduce)": {
            "*": {
              "animationDuration": "0.001ms !important",
              "animationIterationCount": "1 !important",
              "transitionDuration": "0.001ms !important",
            },
          },
        },
      },
    },
    "MuiDrawer": {
      "styleOverrides": {
        "paper": {
          "borderRadius": 0,
          "borderRight": "2px solid #1A1A1A",
        },
      },
    },
    "MuiIconButton": {
      "styleOverrides": {
        "root": {
          "&:focus-visible": {
            "outline": "2px solid #1D8CD8",
            "outlineOffset": "2px",
          },
          "minHeight": 52,
          "minWidth": 52,
        },
      },
    },
    "MuiListItemButton": {
      "styleOverrides": {
        "root": {
          "&.Mui-selected": {
            "&:hover": {
              "backgroundColor": "rgba(0, 51, 102, 0.16)",
            },
            "backgroundColor": "rgba(0, 51, 102, 0.12)",
            "border": "2px solid #003366",
          },
          "&:focus-visible": {
            "outline": "2px solid #1D8CD8",
            "outlineOffset": "2px",
          },
          "&:hover": {
            "backgroundColor": "rgba(0, 51, 102, 0.08)",
          },
          "borderRadius": 4,
          "margin": "4px 8px",
          "minHeight": 52,
        },
      },
    },
    "MuiPaper": {
      "styleOverrides": {
        "elevation1": {
          "boxShadow": "none",
        },
        "elevation2": {
          "boxShadow": "none",
        },
        "elevation3": {
          "boxShadow": "none",
        },
        "root": {
          "backgroundColor": "#FFFFFF",
          "border": "1px solid #1A1A1A",
          "borderRadius": 4,
        },
      },
    },
    "MuiSvgIcon": {
      "styleOverrides": {
        "fontSizeLarge": {
          "fontSize": "32px",
        },
        "fontSizeSmall": {
          "fontSize": "19.52px",
        },
        "root": {
          "fontSize": "28px",
        },
      },
    },
    "MuiTextField": {
      "styleOverrides": {
        "root": {
          "& .MuiInputLabel-root": {
            "transform": "translate(14px, 12px) scale(1)",
          },
          "& .MuiOutlinedInput-root": {
            "& fieldset": {
              "border": "2px solid #000000",
            },
            "&.Mui-error fieldset": {
              "border": "2px solid #B3261E",
            },
            "&.Mui-focused fieldset": {
              "border": "2px solid #1D8CD8",
            },
            "&:hover fieldset": {
              "borderColor": "#000000",
            },
            "borderRadius": 4,
            "minHeight": 56,
          },
        },
      },
    },
    "MuiTooltip": {
      "styleOverrides": {
        "tooltip": {
          "backgroundColor": "#1D8CD8",
          "border": "1px solid #000000",
          "borderRadius": 4,
          "color": "#FFFFFF",
          "fontSize": "16px",
          "padding": "8px 12px",
        },
      },
    },
  },
  "containerQueries": [Function],
  "direction": "ltr",
  "mixins": {
    "toolbar": {
      "@media (min-width:0px)": {
        "@media (orientation: landscape)": {
          "minHeight": 48,
        },
      },
      "@media (min-width:600px)": {
        "minHeight": 64,
      },
      "minHeight": 56,
    },
  },
  "palette": {
    "action": {
      "activatedOpacity": 0.12,
      "active": "rgba(0, 0, 0, 0.54)",
      "disabled": "rgba(0, 0, 0, 0.26)",
      "disabledBackground": "rgba(0, 0, 0, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(0, 0, 0, 0.12)",
      "focusOpacity": 0.12,
      "hover": "rgba(0, 0, 0, 0.04)",
      "hoverOpacity": 0.04,
      "selected": "rgba(0, 0, 0, 0.08)",
      "selectedOpacity": 0.08,
    },
    "augmentColor": [Function],
    "background": {
      "default": "#FFFFFF",
      "paper": "#FFFFFF",
    },
    "common": {
      "black": "#000",
      "white": "#fff",
    },
    "contrastThreshold": 3,
    "divider": "rgba(0, 0, 0, 0.12)",
    "error": {
      "contrastText": "#FFFFFF",
      "dark": "rgb(125, 26, 21)",
      "light": "rgb(194, 81, 75)",
      "main": "#B3261E",
    },
    "getContrastText": [Function],
    "grey": {
      "100": "#f5f5f5",
      "200": "#eeeeee",
      "300": "#e0e0e0",
      "400": "#bdbdbd",
      "50": "#fafafa",
      "500": "#9e9e9e",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
      "A100": "#f5f5f5",
      "A200": "#eeeeee",
      "A400": "#bdbdbd",
      "A700": "#616161",
    },
    "info": {
      "contrastText": "#FFFFFF",
      "dark": "rgb(55, 125, 178)",
      "light": "rgb(114, 194, 255)",
      "main": "#4FB3FF",
    },
    "mode": "light",
    "primary": {
      "contrastText": "#FFFFFF",
      "dark": "#000000",
      "light": "rgb(51, 91, 132)",
      "main": "#003366",
    },
    "secondary": {
      "contrastText": "#FFFFFF",
      "dark": "rgb(32, 49, 32)",
      "light": "rgb(87, 107, 88)",
      "main": "#2E472F",
    },
    "success": {
      "contrastText": "#FFFFFF",
      "dark": "rgb(36, 117, 58)",
      "light": "rgb(92, 185, 117)",
      "main": "#34A853",
    },
    "text": {
      "disabled": "rgba(0, 0, 0, 0.38)",
      "primary": "#000000",
      "secondary": "#000000",
    },
    "tonalOffset": 0.2,
    "warning": {
      "contrastText": "#000000",
      "dark": "rgb(158, 81, 0)",
      "light": "rgb(232, 143, 51)",
      "main": "#E37400",
    },
  },
  "shadows": [
    "none",
    "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
    "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
    "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
  ],
  "shape": {
    "borderRadius": 4,
  },
  "spacing": [Function],
  "toRuntimeSource": [Function],
  "transitions": {
    "create": [Function],
    "duration": {
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195,
      "short": 250,
      "shorter": 200,
      "shortest": 150,
      "standard": 300,
    },
    "easing": {
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
    },
    "getAutoHeightDuration": [Function],
  },
  "typography": {
    "body1": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "19.52px",
      "fontWeight": 400,
      "lineHeight": 1.5,
    },
    "body2": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "16px",
      "fontWeight": 400,
      "lineHeight": 1.5,
    },
    "button": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "19.52px",
      "fontWeight": 500,
      "lineHeight": 1.75,
      "textTransform": "none",
    },
    "caption": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "14px",
      "fontWeight": 400,
      "lineHeight": 1.5,
    },
    "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
    "fontSize": 19.52,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "39.04px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h2": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "29.28px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h3": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "24.4px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h4": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "19.52px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h5": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "16px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h6": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "16px",
      "fontWeight": 500,
      "lineHeight": 1.2,
    },
    "htmlFontSize": 16,
    "inherit": {
      "fontFamily": "inherit",
      "fontSize": "inherit",
      "fontWeight": "inherit",
      "letterSpacing": "inherit",
      "lineHeight": "inherit",
    },
    "overline": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "1.0457142857142858rem",
      "fontWeight": 400,
      "lineHeight": 2.66,
      "textTransform": "uppercase",
    },
    "pxToRem": [Function],
    "subtitle1": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "1.3942857142857144rem",
      "fontWeight": 400,
      "lineHeight": 1.75,
    },
    "subtitle2": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "1.22rem",
      "fontWeight": 500,
      "lineHeight": 1.57,
    },
  },
  "unstable_sx": [Function],
  "unstable_sxConfig": {
    "alignContent": {},
    "alignItems": {},
    "alignSelf": {},
    "backgroundColor": {
      "themeKey": "palette",
      "transform": [Function],
    },
    "bgcolor": {
      "cssProperty": "backgroundColor",
      "themeKey": "palette",
      "transform": [Function],
    },
    "border": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderBottom": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderBottomColor": {
      "themeKey": "palette",
    },
    "borderColor": {
      "themeKey": "palette",
    },
    "borderLeft": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderLeftColor": {
      "themeKey": "palette",
    },
    "borderRadius": {
      "style": [Function],
      "themeKey": "shape.borderRadius",
    },
    "borderRight": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderRightColor": {
      "themeKey": "palette",
    },
    "borderTop": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderTopColor": {
      "themeKey": "palette",
    },
    "bottom": {},
    "boxShadow": {
      "themeKey": "shadows",
    },
    "boxSizing": {},
    "color": {
      "themeKey": "palette",
      "transform": [Function],
    },
    "columnGap": {
      "style": [Function],
    },
    "display": {},
    "displayPrint": {
      "cssProperty": false,
      "transform": [Function],
    },
    "flex": {},
    "flexBasis": {},
    "flexDirection": {},
    "flexGrow": {},
    "flexShrink": {},
    "flexWrap": {},
    "font": {
      "themeKey": "font",
    },
    "fontFamily": {
      "themeKey": "typography",
    },
    "fontSize": {
      "themeKey": "typography",
    },
    "fontStyle": {
      "themeKey": "typography",
    },
    "fontWeight": {
      "themeKey": "typography",
    },
    "gap": {
      "style": [Function],
    },
    "gridArea": {},
    "gridAutoColumns": {},
    "gridAutoFlow": {},
    "gridAutoRows": {},
    "gridColumn": {},
    "gridRow": {},
    "gridTemplateAreas": {},
    "gridTemplateColumns": {},
    "gridTemplateRows": {},
    "height": {
      "transform": [Function],
    },
    "justifyContent": {},
    "justifyItems": {},
    "justifySelf": {},
    "left": {},
    "letterSpacing": {},
    "lineHeight": {},
    "m": {
      "style": [Function],
    },
    "margin": {
      "style": [Function],
    },
    "marginBlock": {
      "style": [Function],
    },
    "marginBlockEnd": {
      "style": [Function],
    },
    "marginBlockStart": {
      "style": [Function],
    },
    "marginBottom": {
      "style": [Function],
    },
    "marginInline": {
      "style": [Function],
    },
    "marginInlineEnd": {
      "style": [Function],
    },
    "marginInlineStart": {
      "style": [Function],
    },
    "marginLeft": {
      "style": [Function],
    },
    "marginRight": {
      "style": [Function],
    },
    "marginTop": {
      "style": [Function],
    },
    "marginX": {
      "style": [Function],
    },
    "marginY": {
      "style": [Function],
    },
    "maxHeight": {
      "transform": [Function],
    },
    "maxWidth": {
      "style": [Function],
    },
    "mb": {
      "style": [Function],
    },
    "minHeight": {
      "transform": [Function],
    },
    "minWidth": {
      "transform": [Function],
    },
    "ml": {
      "style": [Function],
    },
    "mr": {
      "style": [Function],
    },
    "mt": {
      "style": [Function],
    },
    "mx": {
      "style": [Function],
    },
    "my": {
      "style": [Function],
    },
    "order": {},
    "outline": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "outlineColor": {
      "themeKey": "palette",
    },
    "overflow": {},
    "p": {
      "style": [Function],
    },
    "padding": {
      "style": [Function],
    },
    "paddingBlock": {
      "style": [Function],
    },
    "paddingBlockEnd": {
      "style": [Function],
    },
    "paddingBlockStart": {
      "style": [Function],
    },
    "paddingBottom": {
      "style": [Function],
    },
    "paddingInline": {
      "style": [Function],
    },
    "paddingInlineEnd": {
      "style": [Function],
    },
    "paddingInlineStart": {
      "style": [Function],
    },
    "paddingLeft": {
      "style": [Function],
    },
    "paddingRight": {
      "style": [Function],
    },
    "paddingTop": {
      "style": [Function],
    },
    "paddingX": {
      "style": [Function],
    },
    "paddingY": {
      "style": [Function],
    },
    "pb": {
      "style": [Function],
    },
    "pl": {
      "style": [Function],
    },
    "position": {},
    "pr": {
      "style": [Function],
    },
    "pt": {
      "style": [Function],
    },
    "px": {
      "style": [Function],
    },
    "py": {
      "style": [Function],
    },
    "right": {},
    "rowGap": {
      "style": [Function],
    },
    "textAlign": {},
    "textOverflow": {},
    "textTransform": {},
    "top": {},
    "typography": {
      "cssProperty": false,
      "themeKey": "typography",
    },
    "visibility": {},
    "whiteSpace": {},
    "width": {
      "transform": [Function],
    },
    "zIndex": {
      "themeKey": "zIndex",
    },
  },
  "zIndex": {
    "appBar": 1100,
    "drawer": 1200,
    "fab": 1050,
    "mobileStepper": 1000,
    "modal": 1300,
    "snackbar": 1400,
    "speedDial": 1050,
    "tooltip": 1500,
  },
}
`;

exports[`Theme Factory > createAppTheme > creates standard mode theme with correct palette 1`] = `
{
  "applyStyles": [Function],
  "breakpoints": {
    "between": [Function],
    "down": [Function],
    "keys": [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ],
    "not": [Function],
    "only": [Function],
    "unit": "px",
    "up": [Function],
    "values": {
      "lg": 1200,
      "md": 1024,
      "sm": 600,
      "xl": 1536,
      "xs": 0,
    },
  },
  "components": {
    "MuiAlert": {
      "styleOverrides": {
        "root": {
          "border": "none",
          "borderRadius": 8,
        },
        "standardError": {
          "backgroundColor": "#B3261E",
          "border": "1px solid #B3261E",
          "color": "#FFFFFF",
        },
        "standardInfo": {
          "backgroundColor": "#1D8CD8",
          "color": "#FFFFFF",
        },
        "standardSuccess": {
          "backgroundColor": "#1E7344",
          "border": "1px solid #34A853",
          "color": "#FFFFFF",
        },
        "standardWarning": {
          "backgroundColor": "#E37400",
          "border": "1px solid #FFB347",
          "color": "#000000",
        },
      },
    },
    "MuiAppBar": {
      "styleOverrides": {
        "root": {
          "borderBottom": "none",
          "boxShadow": "0px 1px 2px rgba(0, 0, 0, 0.15)",
        },
      },
    },
    "MuiButton": {
      "styleOverrides": {
        "contained": {
          "&:hover": {
            "boxShadow": "0px 4px 12px rgba(0, 0, 0, 0.15)",
          },
          "border": "none",
          "boxShadow": "0px 1px 2px rgba(0, 0, 0, 0.15)",
        },
        "outlined": {
          "&:hover": {
            "backgroundColor": "rgba(0, 51, 102, 0.04)",
          },
          "border": "1px solid #4A4A4A",
        },
        "root": {
          "&:focus-visible": {
            "outline": "2px solid #1D8CD8",
            "outlineOffset": "2px",
          },
          "borderRadius": 8,
          "fontSize": "16px",
          "fontWeight": 500,
          "minHeight": 44,
          "padding": "16px 24px",
          "textTransform": "none",
          "transition": "all 200ms cubic-bezier(0.4, 0.0, 0.2, 1)",
        },
      },
      "variants": [
        {
          "props": {
            "color": "error",
          },
          "style": {
            "border": "3px solid #B3261E",
            "fontWeight": 600,
          },
        },
      ],
    },
    "MuiCard": {
      "styleOverrides": {
        "root": {
          "&:hover": {
            "boxShadow": "0px 4px 12px rgba(0, 0, 0, 0.15)",
          },
          "backgroundColor": "#FFFFFF",
          "border": "1px solid #E0E6ED",
          "borderRadius": 8,
          "boxShadow": "0px 1px 2px rgba(0, 0, 0, 0.15)",
          "color": "#4A4A4A",
        },
      },
    },
    "MuiChip": {
      "styleOverrides": {
        "root": {
          "borderRadius": 999,
          "fontSize": "14px",
        },
      },
    },
    "MuiCssBaseline": {
      "styleOverrides": {
        "body": {
          "@media (prefers-reduced-motion: reduce)": {
            "*": {
              "animationDuration": "0.001ms !important",
              "animationIterationCount": "1 !important",
              "transitionDuration": "0.001ms !important",
            },
          },
        },
      },
    },
    "MuiDrawer": {
      "styleOverrides": {
        "paper": {
          "borderRadius": 0,
          "borderRight": "1px solid rgba(0,0,0,0.12)",
        },
      },
    },
    "MuiIconButton": {
      "styleOverrides": {
        "root": {
          "&:focus-visible": {
            "outline": "2px solid #1D8CD8",
            "outlineOffset": "2px",
          },
          "minHeight": 44,
          "minWidth": 44,
        },
      },
    },
    "MuiListItemButton": {
      "styleOverrides": {
        "root": {
          "&.Mui-selected": {
            "&:hover": {
              "backgroundColor": "rgba(0, 51, 102, 0.16)",
            },
            "backgroundColor": "rgba(0, 51, 102, 0.12)",
            "border": "none",
          },
          "&:focus-visible": {
            "outline": "2px solid #1D8CD8",
            "outlineOffset": "2px",
          },
          "&:hover": {
            "backgroundColor": "rgba(0, 51, 102, 0.08)",
          },
          "borderRadius": 8,
          "margin": "4px 8px",
          "minHeight": 44,
        },
      },
    },
    "MuiPaper": {
      "styleOverrides": {
        "elevation1": {
          "boxShadow": "0px 1px 2px rgba(0, 0, 0, 0.15)",
        },
        "elevation2": {
          "boxShadow": "0px 4px 12px rgba(0, 0, 0, 0.15)",
        },
        "elevation3": {
          "boxShadow": "0px 8px 24px rgba(0, 0, 0, 0.15)",
        },
        "root": {
          "backgroundColor": "#F5F7FA",
          "border": "none",
          "borderRadius": 8,
        },
      },
    },
    "MuiSvgIcon": {
      "styleOverrides": {
        "fontSizeLarge": {
          "fontSize": "28px",
        },
        "fontSizeSmall": {
          "fontSize": "16px",
        },
        "root": {
          "fontSize": "24px",
        },
      },
    },
    "MuiTextField": {
      "styleOverrides": {
        "root": {
          "& .MuiInputLabel-root": {
            "transform": "translate(14px, 12px) scale(1)",
          },
          "& .MuiOutlinedInput-root": {
            "& fieldset": {
              "border": "1px solid #4A4A4A",
            },
            "&.Mui-error fieldset": {
              "border": "1px solid #B3261E",
            },
            "&.Mui-focused fieldset": {
              "border": "2px solid #1D8CD8",
            },
            "&:hover fieldset": {
              "borderColor": "#4A4A4A",
            },
            "borderRadius": 8,
            "minHeight": 48,
          },
        },
      },
    },
    "MuiTooltip": {
      "styleOverrides": {
        "tooltip": {
          "backgroundColor": "#1D8CD8",
          "border": "none",
          "borderRadius": 12,
          "color": "#FFFFFF",
          "fontSize": "14px",
          "padding": "8px 12px",
        },
      },
    },
  },
  "containerQueries": [Function],
  "direction": "ltr",
  "mixins": {
    "toolbar": {
      "@media (min-width:0px)": {
        "@media (orientation: landscape)": {
          "minHeight": 48,
        },
      },
      "@media (min-width:600px)": {
        "minHeight": 64,
      },
      "minHeight": 56,
    },
  },
  "palette": {
    "action": {
      "activatedOpacity": 0.12,
      "active": "rgba(0, 0, 0, 0.54)",
      "disabled": "rgba(0, 0, 0, 0.26)",
      "disabledBackground": "rgba(0, 0, 0, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(0, 0, 0, 0.12)",
      "focusOpacity": 0.12,
      "hover": "rgba(0, 0, 0, 0.04)",
      "hoverOpacity": 0.04,
      "selected": "rgba(0, 0, 0, 0.08)",
      "selectedOpacity": 0.08,
    },
    "augmentColor": [Function],
    "background": {
      "default": "#F5F7FA",
      "paper": "#FFFFFF",
    },
    "common": {
      "black": "#000",
      "white": "#fff",
    },
    "contrastThreshold": 3,
    "divider": "rgba(0, 0, 0, 0.12)",
    "error": {
      "contrastText": "#FFFFFF",
      "dark": "rgb(125, 26, 21)",
      "light": "rgb(194, 81, 75)",
      "main": "#B3261E",
    },
    "getContrastText": [Function],
    "grey": {
      "100": "#f5f5f5",
      "200": "#eeeeee",
      "300": "#e0e0e0",
      "400": "#bdbdbd",
      "50": "#fafafa",
      "500": "#9e9e9e",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
      "A100": "#f5f5f5",
      "A200": "#eeeeee",
      "A400": "#bdbdbd",
      "A700": "#616161",
    },
    "info": {
      "contrastText": "#FFFFFF",
      "dark": "rgb(20, 98, 151)",
      "light": "rgb(74, 163, 223)",
      "main": "#1D8CD8",
    },
    "mode": "light",
    "primary": {
      "contrastText": "#FFFFFF",
      "dark": "#000000",
      "light": "rgb(51, 91, 132)",
      "main": "#003366",
    },
    "secondary": {
      "contrastText": "#FFFFFF",
      "dark": "rgb(55, 74, 62)",
      "light": "rgb(114, 136, 123)",
      "main": "#4F6B5A",
    },
    "success": {
      "contrastText": "#FFFFFF",
      "dark": "rgb(21, 80, 47)",
      "light": "rgb(75, 143, 105)",
      "main": "#1E7344",
    },
    "text": {
      "disabled": "rgba(0, 0, 0, 0.38)",
      "primary": "#4A4A4A",
      "secondary": "#4A4A4A",
    },
    "tonalOffset": 0.2,
    "warning": {
      "contrastText": "#000000",
      "dark": "rgb(158, 81, 0)",
      "light": "rgb(232, 143, 51)",
      "main": "#E37400",
    },
  },
  "shadows": [
    "none",
    "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
    "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
    "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
  ],
  "shape": {
    "borderRadius": 8,
  },
  "spacing": [Function],
  "toRuntimeSource": [Function],
  "transitions": {
    "create": [Function],
    "duration": {
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195,
      "short": 250,
      "shorter": 200,
      "shortest": 150,
      "standard": 300,
    },
    "easing": {
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
    },
    "getAutoHeightDuration": [Function],
  },
  "typography": {
    "body1": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "16px",
      "fontWeight": 400,
      "lineHeight": 1.5,
    },
    "body2": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "14px",
      "fontWeight": 400,
      "lineHeight": 1.5,
    },
    "button": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "16px",
      "fontWeight": 500,
      "lineHeight": 1.75,
      "textTransform": "none",
    },
    "caption": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "12px",
      "fontWeight": 400,
      "lineHeight": 1.5,
    },
    "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
    "fontSize": 16,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "32px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h2": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "24px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h3": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "20px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h4": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "16px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h5": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "14px",
      "fontWeight": 600,
      "lineHeight": 1.2,
    },
    "h6": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "14px",
      "fontWeight": 500,
      "lineHeight": 1.2,
    },
    "htmlFontSize": 16,
    "inherit": {
      "fontFamily": "inherit",
      "fontSize": "inherit",
      "fontWeight": "inherit",
      "letterSpacing": "inherit",
      "lineHeight": "inherit",
    },
    "overline": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "0.8571428571428571rem",
      "fontWeight": 400,
      "lineHeight": 2.66,
      "textTransform": "uppercase",
    },
    "pxToRem": [Function],
    "subtitle1": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "1.1428571428571428rem",
      "fontWeight": 400,
      "lineHeight": 1.75,
    },
    "subtitle2": {
      "fontFamily": ""Inter", "Segoe UI", system-ui, -apple-system, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 500,
      "lineHeight": 1.57,
    },
  },
  "unstable_sx": [Function],
  "unstable_sxConfig": {
    "alignContent": {},
    "alignItems": {},
    "alignSelf": {},
    "backgroundColor": {
      "themeKey": "palette",
      "transform": [Function],
    },
    "bgcolor": {
      "cssProperty": "backgroundColor",
      "themeKey": "palette",
      "transform": [Function],
    },
    "border": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderBottom": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderBottomColor": {
      "themeKey": "palette",
    },
    "borderColor": {
      "themeKey": "palette",
    },
    "borderLeft": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderLeftColor": {
      "themeKey": "palette",
    },
    "borderRadius": {
      "style": [Function],
      "themeKey": "shape.borderRadius",
    },
    "borderRight": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderRightColor": {
      "themeKey": "palette",
    },
    "borderTop": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderTopColor": {
      "themeKey": "palette",
    },
    "bottom": {},
    "boxShadow": {
      "themeKey": "shadows",
    },
    "boxSizing": {},
    "color": {
      "themeKey": "palette",
      "transform": [Function],
    },
    "columnGap": {
      "style": [Function],
    },
    "display": {},
    "displayPrint": {
      "cssProperty": false,
      "transform": [Function],
    },
    "flex": {},
    "flexBasis": {},
    "flexDirection": {},
    "flexGrow": {},
    "flexShrink": {},
    "flexWrap": {},
    "font": {
      "themeKey": "font",
    },
    "fontFamily": {
      "themeKey": "typography",
    },
    "fontSize": {
      "themeKey": "typography",
    },
    "fontStyle": {
      "themeKey": "typography",
    },
    "fontWeight": {
      "themeKey": "typography",
    },
    "gap": {
      "style": [Function],
    },
    "gridArea": {},
    "gridAutoColumns": {},
    "gridAutoFlow": {},
    "gridAutoRows": {},
    "gridColumn": {},
    "gridRow": {},
    "gridTemplateAreas": {},
    "gridTemplateColumns": {},
    "gridTemplateRows": {},
    "height": {
      "transform": [Function],
    },
    "justifyContent": {},
    "justifyItems": {},
    "justifySelf": {},
    "left": {},
    "letterSpacing": {},
    "lineHeight": {},
    "m": {
      "style": [Function],
    },
    "margin": {
      "style": [Function],
    },
    "marginBlock": {
      "style": [Function],
    },
    "marginBlockEnd": {
      "style": [Function],
    },
    "marginBlockStart": {
      "style": [Function],
    },
    "marginBottom": {
      "style": [Function],
    },
    "marginInline": {
      "style": [Function],
    },
    "marginInlineEnd": {
      "style": [Function],
    },
    "marginInlineStart": {
      "style": [Function],
    },
    "marginLeft": {
      "style": [Function],
    },
    "marginRight": {
      "style": [Function],
    },
    "marginTop": {
      "style": [Function],
    },
    "marginX": {
      "style": [Function],
    },
    "marginY": {
      "style": [Function],
    },
    "maxHeight": {
      "transform": [Function],
    },
    "maxWidth": {
      "style": [Function],
    },
    "mb": {
      "style": [Function],
    },
    "minHeight": {
      "transform": [Function],
    },
    "minWidth": {
      "transform": [Function],
    },
    "ml": {
      "style": [Function],
    },
    "mr": {
      "style": [Function],
    },
    "mt": {
      "style": [Function],
    },
    "mx": {
      "style": [Function],
    },
    "my": {
      "style": [Function],
    },
    "order": {},
    "outline": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "outlineColor": {
      "themeKey": "palette",
    },
    "overflow": {},
    "p": {
      "style": [Function],
    },
    "padding": {
      "style": [Function],
    },
    "paddingBlock": {
      "style": [Function],
    },
    "paddingBlockEnd": {
      "style": [Function],
    },
    "paddingBlockStart": {
      "style": [Function],
    },
    "paddingBottom": {
      "style": [Function],
    },
    "paddingInline": {
      "style": [Function],
    },
    "paddingInlineEnd": {
      "style": [Function],
    },
    "paddingInlineStart": {
      "style": [Function],
    },
    "paddingLeft": {
      "style": [Function],
    },
    "paddingRight": {
      "style": [Function],
    },
    "paddingTop": {
      "style": [Function],
    },
    "paddingX": {
      "style": [Function],
    },
    "paddingY": {
      "style": [Function],
    },
    "pb": {
      "style": [Function],
    },
    "pl": {
      "style": [Function],
    },
    "position": {},
    "pr": {
      "style": [Function],
    },
    "pt": {
      "style": [Function],
    },
    "px": {
      "style": [Function],
    },
    "py": {
      "style": [Function],
    },
    "right": {},
    "rowGap": {
      "style": [Function],
    },
    "textAlign": {},
    "textOverflow": {},
    "textTransform": {},
    "top": {},
    "typography": {
      "cssProperty": false,
      "themeKey": "typography",
    },
    "visibility": {},
    "whiteSpace": {},
    "width": {
      "transform": [Function],
    },
    "zIndex": {
      "themeKey": "zIndex",
    },
  },
  "zIndex": {
    "appBar": 1100,
    "drawer": 1200,
    "fab": 1050,
    "mobileStepper": 1000,
    "modal": 1300,
    "snackbar": 1400,
    "speedDial": 1050,
    "tooltip": 1500,
  },
}
`;
